<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Name_User_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
                android:id="@+id/LoginUsername"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="22sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_Password"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
                android:id="@+id/BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="Log In"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center" android:id="@+id/toRegisterMenuButton" android:text="@string/user_Register"/>

    </LinearLayout>
</RelativeLayout>