<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPackage.AccountManage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Admin"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/Choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Acc_manage"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Delete_Acc" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/SearchAcc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:queryHint="Search event" />

        <ListView
            android:id="@+id/AccListView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>