<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPackage.EventManage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Admin"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/Choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Event_manage"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/choice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Admin_Choices"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/SearchAcc"
            app:queryHint="Search event"
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/EventListView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>